# includepy

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  example.py  noxfile.py  pyproject.toml  requirements-rtd.txt  zensical.toml
docs/: acknowledgements.md  api.md  changelog.md  index.md  license.md  options.md
examples/: factorial.in  factorial.out  only_lines.in  only_lines.out
src/includepy/: __init__.py
tests/: duplicates.py  example.py  test_basic_include.py  test_escape.py  test_examples.py  test_invalid_directives.py  test_no_includes.py
