[build-system]
requires = ["hatchling ~= 1.18"]
build-backend = "hatchling.build"

[project]
name = "includepy"
version = "0.1"
requires-python = ">=3.10"
description = "Include Python source code in Markdown files"
license = "MIT"
license-files = [
  "LICENSE",
]
readme = "README.md"
authors = [
  { name = "Rob Moss", email = "rgmoss@unimelb.edu.au" },
]
maintainers = [
  { name = "Rob Moss", email = "rgmoss@unimelb.edu.au" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "Markdown >= 3.6",
]
optional-dependencies.tests = [
  "pytest >= 8.1.1",
  "pytest-cov >= 4.0",
]
optional-dependencies.docs = [
  "zensical >= 0.0.23",
  "mkdocstrings-python >= 2.0.3",
]

[project.urls]
source = "https://github.com/robmoss/includepy"

[tool.pytest.ini_options]
addopts = """\
    --capture=no \
    --cov-report term-missing \
    --cov-report html \
    --import-mode=importlib \
    """

[tool.ruff]
line-length = 78
target-version = "py310"

[tool.ruff.lint]
# Enable pyflakes (F), pycodestyle (E, W), flake8-bugbear (B), pyupgrade (UP),
# flake8-debugger (T10), NumPy (NPY), and flake8-pytest-style (PT).
# Also verify that "noqa" directives (used to suppress lint errors) are valid,
# in that they are suppressing lint errors that are present.
select = ["F", "E", "W", "B", "UP", "T10", "NPY", "PT", "RUF100"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
